feat: implement TodoItem class and cross-out on completed

--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -1,4 +1,4 @@
 <form (ngSubmit)="onSubmit()">
-  <input type="text" name="new-todo-item" placeholder="Add to-do" [(ngModel)]="newTodoItem" />
+  <input type="text" name="new-task" placeholder="Add to-do" [(ngModel)]="newTask" />
   <button type="submit">Submit</button>
 </form>
