--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -8,6 +8,7 @@
   <input
     type="checkbox"
     id="todo-item-{{todoItem.id}}"
+    [checked]="todoItem.isDone"
     (change)="onToggleTodoCompleted($event)"
   >
   {{todoItem.title}}
