--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,6 +1,6 @@
-<div class="todo-list">
+<ul class="todo-items">
   <app-todo-item
     *ngFor="let todoItem of todoItems"
     [todoItem]="todoItem"
   ></app-todo-item>
-</div>
+</ul>
