refactor: use filter-by-status pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,17 @@
   <div class="todo-list-wrapper">
     <div class="todo-list pending">
       <h2>To Do</h2>
-      <app-todo-list [todoItems]="pendingTodos"></app-todo-list>
+      <app-todo-list
+        [todoItems]="todoItems | filterByStatus:false"
+        (toggleTodoItemDone)="onToggleTodoItemDone($event)"
+      ></app-todo-list>
     </div>
     <div class="todo-list completed">
       <h2>Completed</h2>
-      <app-todo-list [todoItems]="completedTodos"></app-todo-list>
+      <app-todo-list
+        [todoItems]="todoItems | filterByStatus:true"
+        (toggleTodoItemDone)="onToggleTodoItemDone($event)"
+      ></app-todo-list>
     </div>
   </div>
 </main>
