--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -2,5 +2,6 @@
   <app-todo-item
     *ngFor="let todoItem of todoItems"
     [todoItem]="todoItem"
+    (toggleTodoItemDone)="onToggleTodoItemDone($event)"
   ></app-todo-item>
 </ul>
