feat: implement highlight-done directive

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,9 +1,7 @@
 <label 
   for="todo-item-{{todoItem.id}}"
-  [ngClass]="{ 
-    'todo-item': true, 
-    'completed': todoItem.isDone
-  }"
+  class="todo-item"
+  [appHighlightDone]="todoItem.isDone"
 >
   <input
     type="checkbox"
