feat: wrap header in Material toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<header>
-  <h1>To-do List App</h1>
-</header>
+<mat-toolbar>
+  <header>
+    <h1>To-do List App</h1>
+  </header>
+</mat-toolbar>
 
 <main>
   <app-add-todo (todoItemAdd)="onTodoItemAdd($event)"></app-add-todo>
