--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -1,8 +1,6 @@
 .todo-item {
-  display: block;
-  border: 1px solid black;
+}
 
-  &.completed {
-    text-decoration: line-through;
-  }
+.completed {
+  text-decoration: line-through;
 }
