--- a/src/app/components/todo-list/todo-list.component.scss
+++ b/src/app/components/todo-list/todo-list.component.scss
@@ -1,5 +1,8 @@
-.todo-items {
+:host {
+  width: 100%;
+  padding: 1rem;
+  max-width: 20rem;
   display: flex;
   flex-direction: column;
+  row-gap: 1rem;
 }
-
