refactor: move general layout back to app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<div>Home page</div>
+<mat-toolbar>
+  <header>
+    <h1>To-do List App</h1>
+  </header>
+</mat-toolbar>
+
+<main>
+  <app-todo-list-page></app-todo-list-page>
+</main>
