feat: implement core module with app-header & app-footer components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<mat-toolbar>
-  <header>
-    <h1>To-do List App</h1>
-  </header>
-</mat-toolbar>
+<app-header></app-header>
 
 <main>
   <app-todo-list-page></app-todo-list-page>
 </main>
+
+<app-footer></app-footer>
