feat: set up lazy-loaded routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <main>
-  <app-todo-list-page></app-todo-list-page>
+  <router-outlet></router-outlet>
 </main>
 
 <app-footer></app-footer>
