--- a/src/app/todo/pages/todo-list-page/todo-list-page.component.html
+++ b/src/app/todo/pages/todo-list-page/todo-list-page.component.html
@@ -1,20 +1,26 @@
-<div class="add-todo">
-  <app-add-todo (todoItemAdd)="onTodoItemAdd($event)"></app-add-todo>
+<div class="wrapper" *ngIf="!isLoading; else loadingSpinner">
+  <div class="add-todo">
+    <app-add-todo (todoItemAdd)="onTodoItemAdd($event)"></app-add-todo>
+  </div>
+  
+  <div class="todo-list-wrapper">
+    <div class="todo-list pending">
+      <h2>To Do</h2>
+      <app-todo-list
+        [todoItems]="todoItems | filterByStatus:false"
+        (toggleTodoItemDone)="onToggleTodoItemDone($event)"
+      ></app-todo-list>
+    </div>
+    <div class="todo-list completed">
+      <h2>Completed</h2>
+      <app-todo-list
+        [todoItems]="todoItems | filterByStatus:true"
+        (toggleTodoItemDone)="onToggleTodoItemDone($event)"
+      ></app-todo-list>
+    </div>
+  </div>
 </div>
 
-<div class="todo-list-wrapper">
-  <div class="todo-list pending">
-    <h2>To Do</h2>
-    <app-todo-list
-      [todoItems]="todoItems | filterByStatus:false"
-      (toggleTodoItemDone)="onToggleTodoItemDone($event)"
-    ></app-todo-list>
-  </div>
-  <div class="todo-list completed">
-    <h2>Completed</h2>
-    <app-todo-list
-      [todoItems]="todoItems | filterByStatus:true"
-      (toggleTodoItemDone)="onToggleTodoItemDone($event)"
-    ></app-todo-list>
-  </div>
-</div>
+<ng-template #loadingSpinner>
+  <app-loading-spinner></app-loading-spinner>
+</ng-template>
