--- a/src/app/todo/components/add-todo/add-todo.component.scss
+++ b/src/app/todo/components/add-todo/add-todo.component.scss
@@ -1,12 +1,10 @@
 .wrapper {
   display: flex;
-  flex-direction: row;
-  column-gap: 1rem;
+  flex-direction: column;
+  gap: 1rem;
   align-items: center;
 }
 
-.text-field {
-  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
-    display: none;
-  }
+.form-field {
+  width: 100%;
 }
