--- a/src/app/todo/pages/todo-list-page/todo-list-page.component.html
+++ b/src/app/todo/pages/todo-list-page/todo-list-page.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" *ngIf="!isLoading; else loadingSpinner">
+<div class="wrapper" *ngIf="!(isLoading$ | async); else loadingSpinner">
   <div class="add-todo">
     <app-add-todo (todoItemAdd)="onTodoItemAdd($event)"></app-add-todo>
   </div>
@@ -7,14 +7,14 @@
     <div class="todo-list pending">
       <h2>To Do</h2>
       <app-todo-list
-        [todoItems]="todoItems | filterByStatus:false"
+        [todoItems]="todoItems$ | async | filterByStatus:false"
         (toggleTodoItemDone)="onToggleTodoItemDone($event)"
       ></app-todo-list>
     </div>
     <div class="todo-list completed">
       <h2>Completed</h2>
       <app-todo-list
-        [todoItems]="todoItems | filterByStatus:true"
+        [todoItems]="todoItems$ | async | filterByStatus:true"
         (toggleTodoItemDone)="onToggleTodoItemDone($event)"
       ></app-todo-list>
     </div>
